small screen optimization

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <div class="image"> 
   <h1>Movie App</h1>
   <button onclick="addMovieJson()">Top Rated Movies</button> 
   <button onclick="addTvShowJson()">Top Rated TV Shows</button>
@@ -16,6 +17,7 @@
   <br><br>
   <hr>
   <div id="output"> <h3>Click a button</h3></div>
+  </div>
 
   <script src="script.js"></script>
 </body>
